fix #21510 - Enable Multi-Release Jars (MRJAR - JEP 238 - patch by taylor.smock)
git-svn-id: https://josm.openstreetmap.de/svn/trunk@18308 0c6e7542-c601-0410-84e7-c038aed88b3b